# nrc

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.backup  KEYBOARD_LATENCY_TEST_PLAN.md  README.md  justfile  plan.md
.github/workflows/: ci.yml
.gitignored-deps/: .gitignore
docs/: EE.md  sqlite-databases.md
examples/: evented_test.rs  test_mls_flow.rs
scripts/: act-ci.sh  post-pr-cleanup.sh  release.sh  test-with-relay.sh
src/: actions.rs  app.rs  command_executor.rs  command_store.rs  commands.rs  config.rs  event_bus.rs  evented_nrc.rs  events.rs  groups.rs  key_storage.rs  keyboard.rs  lib.rs  main.rs  messages.rs  network.rs  network_async.rs  network_task.rs  notification_handler.rs  ops.rs  outbox.rs  persistent_retry.rs  profiles.rs  render.rs  scheduler.rs  state.rs  stateful_group_creation.rs  timer_task.rs  tui.rs  types.rs  ui_state.rs  utils.rs
src/handlers/: app.rs  input.rs  mls.rs  mod.rs  nostr.rs  ui.rs
tests/: critical_flows.rs  event_loop_integration.rs  evented_integration_test.rs  exact_tui_scenario.rs  flash_dismissal_test.rs  integration_tests.rs  key_storage_test.rs  manual_persistence_test.rs  minimal_join_test.rs  multi_user_group_integration.rs  nsec_persistence_test.rs  onboarding_integration.rs  ops_orchestrator.rs  ops_store.rs  render_test.rs  simple_onboarding_test.rs  state_machine_integration.rs  test_giftwrap_bug.rs  three_client_group_bug.rs  welcome_processing_bug_test.rs
tests/common/: mod.rs
tests/snapshots/: nrc__render_test__tests__flash_message_dynamic_height.snap  nrc__render_test__tests__flash_message_wrapping_fits.snap  nrc__render_test__tests__flash_message_wrapping_narrow.snap  nrc__render_test__tests__flash_message_wrapping_npub.snap  render_test__tests__flash_message_dynamic_height.snap  render_test__tests__flash_message_wrapping_fits.snap  render_test__tests__flash_message_wrapping_narrow.snap  render_test__tests__flash_message_wrapping_npub.snap
