[package]
name = "nrc"
version = "0.1.0"
edition = "2021"

[dependencies]
nostr-mls = { git = "https://github.com/rust-nostr/nostr", branch = "master" }
nostr-mls-memory-storage = { git = "https://github.com/rust-nostr/nostr", branch = "master" }
nostr-mls-storage = { git = "https://github.com/rust-nostr/nostr", branch = "master" }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", branch = "master", features = ["nip59"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
openmls = { version = "0.7.0", default-features = false }

[dev-dependencies]
