[package]
name = "nrc"
version = "0.1.1"
edition = "2021"
description = "Nostr Relay Chat - A terminal-based chat client using the Nostr protocol with MLS encryption"
license = "MIT"
repository = "https://github.com/justinmoon/nrc"
authors = ["Justin Moon"]

[dependencies]
nrc-mls = "0.1.0"
nrc-mls-sqlite-storage = "0.1.0"
nrc-mls-storage = "0.1.0"
nostr-sdk = { version = "0.43", features = ["nip49", "nip59"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
openmls = { version = "0.7.0", default-features = false }
rusqlite = "0.32"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["bracketed-paste"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
clipboard = "0.5"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
